{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerController",
            "id": "9f118514-4de5-43db-9bcf-cb15802a668e",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "99564348-f6dc-49d5-8f67-871107f133b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa579104-d11a-423e-b811-a052e29abfeb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}